src/test/deca/context/invalid/created/cast/boolean_int.deca
// Description :
//    test cast entre un boolean et int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>
	

class A {}
{
(boolean)(1);
}
